source/externs/X11/extensions/randrproto.d


alias xRRGetScreenResourcesCurrentReply = xRRGetScreenResourcesReply;
enum sz_xRRGetScreenResourcesCurrentReply =	sz_xRRGetScreenResourcesReply;

struct xRRSetCrtcTransformReq {
    CARD8 reqType;
    CARD8 randrReqType;
    CARD16 length;
    RRCrtc crtc;
    xRenderTransform transform;
    CARD16 nbytesFilter;	/* number of bytes in filter name */
    CARD16 pad;
}

enum sz_xRRSetCrtcTransformReq =	48;

struct xRRGetCrtcTransformReq {
    CARD8 reqType;
    CARD8 randrReqType;
    CARD16 length;
    RRCrtc crtc;
}

enum sz_xRRGetCrtcTransformReq =	8;

struct xRRGetCrtcTransformReply {
    BYTE type;
    CARD8 status;
    CARD16 sequenceNumber;
    CARD32 length;
    xRenderTransform pendingTransform;
    BYTE hasTransforms;
    CARD8 pad0;
    CARD16 pad1;
    xRenderTransform currentTransform;
    CARD32 pad2;
    CARD16 pendingNbytesFilter;    /* number of bytes in filter name */
    CARD16 pendingNparamsFilter;   /* number of filter params */
    CARD16 currentNbytesFilter;    /* number of bytes in filter name */
    CARD16 currentNparamsFilter;   /* number of filter params */
}

enum sz_xRRGetCrtcTransformReply =	96;

struct xRRSetOutputPrimaryReq {
    CARD8 reqType;
    CARD8 randrReqType;
    CARD16 length;
    Window window;
    RROutput output;
}
enum sz_xRRSetOutputPrimaryReq =	12;

struct xRRGetOutputPrimaryReq {
    CARD8 reqType;
    CARD8 randrReqType;
    CARD16 length;
    Window window;
}
enum sz_xRRGetOutputPrimaryReq =	8;

struct xRRGetOutputPrimaryReply {
    BYTE type;
    CARD8 pad;
    CARD16 sequenceNumber;
    CARD32 length;
    RROutput output;
    CARD32 pad1;
    CARD32 pad2;
    CARD32 pad3;
    CARD32 pad4;
    CARD32 pad5;
}
enum sz_xRRGetOutputPrimaryReply =	32;

/*
 * Additions for V1.4
 */

struct xRRGetProvidersReq {
    CARD8 reqType;
    CARD8 randrReqType;
    CARD16 length;
    Window window;
}
enum sz_xRRGetProvidersReq = 8;

struct xRRGetProvidersReply {
    BYTE type;
    CARD8 pad;
    CARD16 sequenceNumber;
    CARD32 length;
    Time timestamp;
    CARD16 nProviders;
    CARD16 pad1;
    CARD32 pad2;
    CARD32 pad3;
    CARD32 pad4;
    CARD32 pad5;
}
enum sz_xRRGetProvidersReply = 32;

struct xRRGetProviderInfoReq {
    CARD8 reqType;
    CARD8 randrReqType;
    CARD16 length;
    RRProvider provider;
    Time configTimestamp;
}
enum sz_xRRGetProviderInfoReq = 12;

struct xRRGetProviderInfoReply {
    BYTE type;
    CARD8 status;
    CARD16 sequenceNumber;
    CARD32 length;
    Time timestamp;
    CARD32 capabilities;
    CARD16 nCrtcs;
    CARD16 nOutputs;
    CARD16 nAssociatedProviders;
    CARD16 nameLength;
    CARD32 pad1;
    CARD32 pad2;
}
enum sz_xRRGetProviderInfoReply = 32;

struct xRRSetProviderOutputSourceReq {
    CARD8 reqType;
    CARD8 randrReqType;
    CARD16 length;
    RRProvider provider;
    RRProvider source_provider;
    Time configTimestamp;
}
enum sz_xRRSetProviderOutputSourceReq = 16;

struct xRRSetProviderOffloadSinkReq {
    CARD8 reqType;
    CARD8 randrReqType;
    CARD16 length;
    RRProvider provider;
    RRProvider sink_provider;
    Time configTimestamp;
}
enum sz_xRRSetProviderOffloadSinkReq = 16;

struct xRRListProviderPropertiesReq {
    CARD8 reqType;
    CARD8 randrReqType;
    CARD16 length;
    RRProvider provider;
}
enum sz_xRRListProviderPropertiesReq =	8;

struct xRRListProviderPropertiesReply {
    BYTE type;
    CARD8 pad0;
    CARD16 sequenceNumber;
    CARD32 length;
    CARD16 nAtoms;
    CARD16 pad1;
    CARD32 pad2;
    CARD32 pad3;
    CARD32 pad4;
    CARD32 pad5;
    CARD32 pad6;
}
enum sz_xRRListProviderPropertiesReply =	32;

struct xRRQueryProviderPropertyReq {
    CARD8 reqType;
    CARD8 randrReqType;
    CARD16 length;
    RRProvider provider;
    Atom property;
}
enum sz_xRRQueryProviderPropertyReq =	12;

struct xRRQueryProviderPropertyReply {
    BYTE type;
    BYTE pad0;
    CARD16 sequenceNumber;
    CARD32 length;
    BOOL pending;
    BOOL range;
    BOOL immutable_;
    BYTE pad1;
    CARD32 pad2;
    CARD32 pad3;
    CARD32 pad4;
    CARD32 pad5;
    CARD32 pad6;
}
enum sz_xRRQueryProviderPropertyReply =	32;

struct xRRConfigureProviderPropertyReq {
    CARD8 reqType;
    CARD8 randrReqType;
    CARD16 length;
    RRProvider provider;
    Atom property;
    BOOL pending;
    BOOL range;
    CARD16 pad;
}
enum sz_xRRConfigureProviderPropertyReq =	16;

struct xRRChangeProviderPropertyReq {
    CARD8 reqType;
    CARD8 randrReqType;
    CARD16 length;
    RRProvider provider;
    Atom property;
    Atom type;
    CARD8 format;
    CARD8 mode;
    CARD16 pad;
    CARD32 nUnits;
}
enum sz_xRRChangeProviderPropertyReq =	24;

struct xRRDeleteProviderPropertyReq {
    CARD8 reqType;
    CARD8 randrReqType;
    CARD16 length;
    RRProvider provider;
    Atom property;
}
enum sz_xRRDeleteProviderPropertyReq =	12;

struct xRRGetProviderPropertyReq {
    CARD8 reqType;
    CARD8 randrReqType;
    CARD16 length;
    RRProvider provider;
    Atom property;
    Atom type;
    CARD32 longOffset;
    CARD32 longLength;
version (none) {
    BOOL _delete;
} else {
    BOOL delete_;
}
    BOOL pending;
    CARD16 pad1;
}
enum sz_xRRGetProviderPropertyReq =	28;

struct xRRGetProviderPropertyReply {
    BYTE type;
    CARD8 format;
    CARD16 sequenceNumber;
    CARD32 length;
    Atom propertyType;
    CARD32 bytesAfter;
    CARD32 nItems;
    CARD32 pad1;
    CARD32 pad2;
    CARD32 pad3;
}
enum sz_xRRGetProviderPropertyReply =	32;

/*
 * Additions for V1.6
 */

struct xRRCreateLeaseReq {
    CARD8 reqType;
    CARD8 randrReqType;
    CARD16 length;
    Window window;
    RRLease lid;
    CARD16 nCrtcs;
    CARD16 nOutputs;
}
enum sz_xRRCreateLeaseReq =	16;

struct xRRCreateLeaseReply {
    BYTE type;
    CARD8 nfd;
    CARD16 sequenceNumber;
    CARD32 length;
    CARD32 pad2;
    CARD32 pad3;
    CARD32 pad4;
    CARD32 pad5;
    CARD32 pad6;
    CARD32 pad7;
}
enum sz_xRRCreateLeaseReply =		32;

struct xRRFreeLeaseReq {
    CARD8 reqType;
    CARD8 randrReqType;
    CARD16 length;
    RRLease lid;
    BYTE terminate;
    CARD8 pad1;
    CARD16 pad2;
}
enum sz_xRRFreeLeaseReq =		12;

/*
 * event
 */
struct xRRScreenChangeNotifyEvent {
    CARD8 type;				/* always evBase + ScreenChangeNotify */
    CARD8 rotation;			/* new rotation */
    CARD16 sequenceNumber;
    Time timestamp;			/* time screen was changed */
    Time configTimestamp;		/* time config data was changed */
    Window root;			/* root window */
    Window window;			/* window requesting notification */
    SizeID sizeID;			/* new size ID */
    CARD16 subpixelOrder;		/* subpixel order */
    CARD16 widthInPixels;		/* new size */
    CARD16 heightInPixels;
    CARD16 widthInMillimeters;
    CARD16 heightInMillimeters;
}
enum sz_xRRScreenChangeNotifyEvent =	32;

struct xRRCrtcChangeNotifyEvent {
    CARD8 type;				/* always evBase + RRNotify */
    CARD8 subCode;			/* RRNotify_CrtcChange */
    CARD16 sequenceNumber;
    Time timestamp;			/* time crtc was changed */
    Window window;			/* window requesting notification */
    RRCrtc crtc;			/* affected CRTC */
    RRMode mode;			/* current mode */
    CARD16 rotation;			/* rotation and reflection */
    CARD16 pad1;			/* unused */
    INT16 x;				/* new location */
    INT16 y;
    CARD16 width;			/* new size */
    CARD16 height;
}
enum sz_xRRCrtcChangeNotifyEvent =	32;

struct xRROutputChangeNotifyEvent {
    CARD8 type;				/* always evBase + RRNotify */
    CARD8 subCode;			/* RRNotify_OutputChange */
    CARD16 sequenceNumber;
    Time timestamp;			/* time output was changed */
    Time configTimestamp;		/* time config was changed */
    Window window;			/* window requesting notification */
    RROutput output;			/* affected output */
    RRCrtc crtc;			/* current crtc */
    RRMode mode;			/* current mode */
    CARD16 rotation;			/* rotation and reflection */
    CARD8 connection;			/* connection status */
    CARD8 subpixelOrder;		/* subpixel order */
}
enum sz_xRROutputChangeNotifyEvent =	32;

struct xRROutputPropertyNotifyEvent {
    CARD8 type;				/* always evBase + RRNotify */
    CARD8 subCode;			/* RRNotify_OutputProperty */
    CARD16 sequenceNumber;
    Window window;			/* window requesting notification */
    RROutput output;			/* affected output */
    Atom atom;				/* property name */
    Time timestamp;			/* time crtc was changed */
    CARD8 state;			/* NewValue or Deleted */
    CARD8 pad1;
    CARD16 pad2;
    CARD32 pad3;
    CARD32 pad4;
}
enum sz_xRROutputPropertyNotifyEvent =	32;

struct xRRProviderChangeNotifyEvent {
    CARD8 type;				/* always evBase + RRNotify */
    CARD8 subCode;			/* RRNotify_ProviderChange */
    CARD16 sequenceNumber;
    Time timestamp;			/* time provider was changed */
    Window window;			/* window requesting notification */
    RRProvider provider;		/* affected provider */
    CARD32 pad1;
    CARD32 pad2;
    CARD32 pad3;
    CARD32 pad4;
}
enum sz_xRRProviderChangeNotifyEvent =	32;

struct xRRProviderPropertyNotifyEvent {
    CARD8 type;				/* always evBase + RRNotify */
    CARD8 subCode;			/* RRNotify_ProviderProperty */
    CARD16 sequenceNumber;
    Window window;			/* window requesting notification */
    RRProvider provider;		/* affected provider */
    Atom atom;				/* property name */
    Time timestamp;			/* time provider was changed */
    CARD8 state;			/* NewValue or Deleted */
    CARD8 pad1;
    CARD16 pad2;
    CARD32 pad3;
    CARD32 pad4;
}
enum sz_xRRProviderPropertyNotifyEvent =	32;

struct xRRResourceChangeNotifyEvent {
    CARD8 type;				/* always evBase + RRNotify */
    CARD8 subCode;			/* RRNotify_ResourceChange */
    CARD16 sequenceNumber;
    Time timestamp;			/* time resource was changed */
    Window window;			/* window requesting notification */
    CARD32 pad1;
    CARD32 pad2;
    CARD32 pad3;
    CARD32 pad4;
    CARD32 pad5;
}
enum sz_xRRResourceChangeNotifyEvent =	32;

struct xRRLeaseNotifyEvent {
    CARD8 type;				/* always evBase + RRNotify */
    CARD8 subCode;			/* RRNotify_Lease */
    CARD16 sequenceNumber;
    Time timestamp;			/* time resource was changed */
    Window window;			/* window requesting notification */
    RRLease lease;
    CARD8 created;			/* created/deleted */
    CARD8 pad0;
    CARD16 pad1;
    CARD32 pad2;
    CARD32 pad3;
    CARD32 pad4;
}
enum sz_xRRLeaseNotifyEvent =		32;

struct xRRGetPanningReq {
    CARD8 reqType;
    CARD8 randrReqType;
    CARD16 length;
    RRCrtc crtc;
}
enum sz_xRRGetPanningReq =		8;

struct xRRGetPanningReply {
    BYTE type;
    CARD8 status;
    CARD16 sequenceNumber;
    CARD32 length;
    Time timestamp;
    CARD16 left;
    CARD16 top;
    CARD16 width;
    CARD16 height;
    CARD16 track_left;
    CARD16 track_top;
    CARD16 track_width;
    CARD16 track_height;
    INT16 border_left;
    INT16 border_top;
    INT16 border_right;
    INT16 border_bottom;
}
enum sz_xRRGetPanningReply =		36;

struct xRRSetPanningReq {
    CARD8 reqType;
    CARD8 randrReqType;
    CARD16 length;
    RRCrtc crtc;
    Time timestamp;
    CARD16 left;
    CARD16 top;
    CARD16 width;
    CARD16 height;
    CARD16 track_left;
    CARD16 track_top;
    CARD16 track_width;
    CARD16 track_height;
    INT16 border_left;
    INT16 border_top;
    INT16 border_right;
    INT16 border_bottom;
}
enum sz_xRRSetPanningReq =		36;

struct xRRSetPanningReply {
    BYTE type;
    CARD8 status;
    CARD16 sequenceNumber;
    CARD32 length;
    Time newTimestamp;
    CARD32 pad1;
    CARD32 pad2;
    CARD32 pad3;
    CARD32 pad4;
    CARD32 pad5;
}
enum sz_xRRSetPanningReply =	32;

struct xRRMonitorInfo {
    Atom name;
    BOOL primary;
    BOOL automatic;
    CARD16 noutput;
    INT16 x;
    INT16 y;
    CARD16 width;
    CARD16 height;
    CARD32 widthInMillimeters;
    CARD32 heightInMillimeters;
}
enum sz_xRRMonitorInfo =	24;

struct xRRGetMonitorsReq {
    CARD8 reqType;
    CARD8 randrReqType;
    CARD16 length;
    Window window;
    BOOL get_active;
    CARD8 pad;
    CARD16 pad2;
}
enum sz_xRRGetMonitorsReq =	12;
